# sec-filings-mcp

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  GLAMA_BUILD.md  LICENSE.md  MCP_FINANCE_BUILD.md  README.md  buyer_agent.py  glama.json  llms.txt  mcp_server.py  mcp_server_finance.py  pyproject.toml  server.json  skill.md  test_finance_mcp.py
.github/workflows/: ci.yml  publish-mcp.yml
.well-known/: agent-card.json  mcp.json
deploy/: glama_dockerform.json
docs/: A2A.md  DISCOVERY.md  DISTRIBUTION.md  HANDOFF.md  MCP_REGISTRY.md  RELEASE_v1.0.0.md  RELEASE_v1.0.1.md  RELEASE_v1.0.2.md  STAGE_C_AWESOME_PR.md  TRY_WITHOUT_XPAY.md  XPAY_OUTREACH.md  YOUR_TODO.md  ZENN_TUTORIAL.md  awesome-mcp-servers-entry.md  xpay-collection-request.md
scripts/: build_env2.py  debug_xpay_connect.py  debug_xpay_steps.py
sql/: fi_processed_transactions.sql
