[project]
name = "sec-filings-mcp"
version = "1.0.0"
description = "SEC EDGAR filing MCP server for agent workflows (10-K, 10-Q, CompanyFacts, x402)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools<70",
    "sse-starlette>=3.3.2",
    "starlette>=0.52.1",
    "supabase>=2.28.0",
    "uvicorn>=0.42.0",
    "web3>=6.0.0",
]
